# cutcoin

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists_IOS.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  Jenkinsfile  LICENSE  Makefile  README.i18n.md  README.md  ReleaseNotes.md
.github/workflows/: build.yml  build.yml 
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  Doxyfile.in  FindUnbound.cmake  GenVersion.cmake  Version.cmake  test-static-assert.c  test-static-assert.cpp
contrib/: CMakeLists.txt
contrib/brew/: Brewfile
contrib/epee/: CMakeLists.txt
contrib/rlwrap/: monerocommands_bitmonerod.txt  monerocommands_monero-wallet-cli.txt
contrib/snap/: monerod-wrapper  monerod.conf  snapcraft.yaml
include/: INode.h  IWallet.h
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  db_types.h
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h
src/blocks/: CMakeLists.txt  blockexports.c  blocks.h
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  checkpoints.h
src/common/: CMakeLists.txt  aligned.c  aligned.h  apply_permutation.h  base58.cpp  base58.h  boost_serialization_helper.h  command_line.cpp  command_line.h  common_fwd.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  error.cpp  error.h  expect.cpp  expect.h  http_connection.h  i18n.cpp  i18n.h  int-util.h  json_util.h  lightthreadpool.h  notify.cpp  notify.h  password.cpp  password.h  perf_timer.cpp  perf_timer.h  pod-class.h  rpc_client.h  (+20 more)
tests/: CMakeLists.txt  README.md  cryptolib.pl  cryptotest.pl  hash-target.cpp  io.h
tests/common_tests/: CMakeLists.txt  cryptonote_tx_utils.cpp  scheduler.cpp  uint128.cpp
translations/: CMakeLists.txt  generate_translations_header.c  monero.ts  monero_fr.ts  monero_it.ts  monero_sv.ts
(+530 files in other folders)
